--- a/views/theatre/view-schedule.hbs
+++ b/views/theatre/view-schedule.hbs
@@ -40,7 +40,7 @@
                                         <a href="/theatre/edit-show?showId={{this._id}}&screenId={{../screen._id}}"
                                             class="btn btn-accent">Edit</a>
                                         <button type="button" class="btn btn-danger mx-2 my-2 my-sm-0"
-                                            onclick="vex.dialog.confirm({ message: 'Are you sure you want to delete {{this.screenName}} ?', callback: (value) => { if (value) deleteShow(event, '{{../screen._id}}', '{{this._id}}'); } });">Delete</button>
+                                            onclick="vex.dialog.confirm({ message: 'Are you sure you want to delete {{this.movieDetails.0.movieTitle}} ?', callback: (value) => { if (value) deleteShow(event, '{{../screen._id}}', '{{this._id}}'); } });">Delete</button>
                                     </div>
                                 </td>
                             </tr>
