--- a/views/theatre/login.hbs
+++ b/views/theatre/login.hbs
@@ -1,32 +1,54 @@
-<section class="container" style="height: 100vh !important;">
-    <div class="row h-100 justify-content-center">
-        <div class="col-md-4 my-auto">
-            <div class="card card_border border-success-top p-4">
-                <h3 class="text-center text-uppercase text-success font-weight-bold mb-5">Theatre Login</h3>
-                <form action="/theatre/login" method="POST">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email</label>
-                        <input type="email" class="form-control" name="email" placeholder="Type your Email ID"
-                            id="exampleInputEmail1" aria-describedby="emailHelp">
+<div class="limiter">
+    <div class="container-login100">
+        <div class="wrap-login100">
+            <form class="login100-form validate-form" action="/theatre/login" method="POST">
+                <span class="login100-form-title p-b-26">
+                    Theatre Login
+                </span>
+
+                <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
+                    <input class="input100" type="text" name="email">
+                    <span class="focus-input100" data-placeholder="Email"></span>
+                </div>
+
+                <div class="wrap-input100 validate-input" data-validate="Enter password">
+                    <span class="btn-show-pass">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-eye-fill" viewBox="0 0 16 16">
+                            <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
+                            <path
+                                d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
+                        </svg>
+                    </span>
+                    <input class="input100" type="password" name="password" autocomplete="new-password">
+                    <span class="focus-input100" data-placeholder="Password"></span>
+                </div>
+
+                <div class="buttons-wrapper">
+                    <div class="container-login100-form-btn">
+                        <div class="wrap-login100-form-btn">
+                            <div class="login100-form-bgbtn"></div>
+                            <button type="submit" class="login100-form-btn">
+                                Login
+                            </button>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" placeholder="Type your Password" name="password"
-                            id="exampleInputPassword1">
+                    <div class="container-login100-form-btn">
+                        <div class="wrap-login100-form-btn">
+                            <div class="login100-form-bgbtn"></div>
+                            <button type="button" title="Sign in with google"
+                                onClick="authPopup(event, '/theatre/auth/google')" class="login100-form-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                    class="bi bi-google text-white" viewBox="0 0 16 16">
+                                    <path
+                                        d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z" />
+                                </svg>
+                            </button>
+                        </div>
                     </div>
-                    {{#if messages.error}}
-                    <div class="text-center pb-2">
-                        <p class="text-danger">{{messages.error}}</p>
-                    </div>
-                    {{/if}}
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-success rounded-pill px-5">Submit</button>
-                    </div>
-                    <div class="text-center pt-3">
-                        <a class="btn btn-danger text-white rounded-circle" title="Sign in with google" onClick="authPopup(event, '/theatre/auth/google')"><i class="fa fa-google"></i></a>
-                    </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
-</section>
+</div>
+<script src="/assets/js/login.js"></script>
